Fix navbar and hero message bug on mobile
Hero message was on top of menu items.

--- a/jobseek/static/css/main.css
+++ b/jobseek/static/css/main.css
@@ -9,6 +9,10 @@ html, body {
 }
 
 /**** navbar ****/
+.navbar {
+  z-index: 99;
+}
+
 .navbar-collapse {
   text-align: center;
 }
@@ -106,7 +110,7 @@ html, body {
   position: absolute;
   top: 20%;
   color: white;
-  z-index: 99;
+  z-index: 98;
 }
 
 .refine {
