--- a/jobseek/static/scss/1-base/_base-layout.scss
+++ b/jobseek/static/scss/1-base/_base-layout.scss
@@ -1,6 +1,6 @@
 /**** navbar ****/
 .navbar{
-    // height: 80px;
+    z-index: 99;
 }
 
 .navbar-collapse{
