--- a/jobseek/static/scss/2-components/_home_job_post.scss
+++ b/jobseek/static/scss/2-components/_home_job_post.scss
@@ -22,7 +22,7 @@
     position: absolute;
     top: 20%;
     color: white;
-    z-index: 99
+    z-index: 98
     
 }
 
